--- a/test.yaml
+++ b/test.yaml
@@ -1,15 +1,21 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: busybox1
+  name: nginx0-deployment
   labels:
-    app: busybox1
+    app: nginx0-deployment
 spec:
-  containers:
-  - image: busybox
-    command:
-      - sleep
-      - "3600"
-    imagePullPolicy: IfNotPresent
-    name: busybox
-  restartPolicy: Always
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx0
+  template:
+    metadata:
+      labels:
+        app: nginx0
+    spec:
+      containers:
+      - name: nginx
+        image: k8s.gcr.io/nginx:1.7.9
+        ports:
+        - containerPort: 80
